# ZyraAI

./: .gitignore  CMakeLists.txt  README.md  implementation-plan.mdc  roadmap.md
cmake/Modules/: FindSndFile.cmake
examples/: cifar10_classifier.cpp  cifar10_cnn.cpp  cifar10_improved.cpp  mnist_classifier.cpp  mnist_cnn_classifier.cpp  mnist_enhanced_cnn.cpp  mnist_improved_resnet.cpp  mnist_optimized_cnn.cpp  mnist_residual_network.cpp  mnist_resnet.cpp  simple_neural_network.cpp
include/: cuda_utils.h  stt_model.h
include/audio/: audio_processing.h
include/data/: data_handler.h  preprocess_data.h
include/metal/: metal_buffer.h  metal_device.h  metal_kernel.h
include/model/: adam_clip_optimizer.h  adam_optimizer.h  batch_norm_layer.h  channel_batch_norm_layer.h  convolutional_layer.h  dense_layer.h  dropout_layer.h  error_handler.h  flatten_layer.h  header_template.h  identity_layer.h  improved_conv_layer.h  layer.h  lr_scheduler.h  max_pooling_layer.h  model_serializer.h  optimized_conv_layer.h  relu_layer.h  residual_block.h  simple_residual_block.h  softmax_layer.h  zyraAI_model.h
include/personalization/: personality_manager.h
include/speech/: speech_to_text.h
include/stt/: stt_model.h
include/tts/: text_to_speech.h
shaders/metal/: convolution.metal  test_kernel.metal
src/: main.cpp  stt_model.cpp  text_to_speech.cpp
src/audio/: audio_processing.cpp
src/cuda/: conv_kernels.cu
src/data/: data_handler.cpp  preprocess_data.cpp  text_preprocess.cpp
src/metal/: metal_buffer.mm  metal_device.mm  metal_kernel.mm
src/model/: dense_layer.cpp  layer.cpp  zyraAI_model.cpp
src/personalization/: personality_manager.cpp
src/speech/: speech_to_text.cpp
src/stt/: stt_model.cpp
src/tts/: text_to_speech.cpp
tests/: data_tests.cpp  error_handler_test.cpp  metal_test.cpp  model_tests.cpp  sample_data.txt  sample_data2.txt  speech_test.cpp
